PORT-5636: Error msg for report fixed & Create report button updated

--- a/src/pages/avails/avails-table-release-report/AvailsTableReleaseReport.scss
+++ b/src/pages/avails/avails-table-release-report/AvailsTableReleaseReport.scss
@@ -21,3 +21,9 @@
         }
     }
 }
+
+.nexus-c-right-repository-release-report-content__btn {
+    width: 100%;
+    background: #6366F1;
+    border: 1px solid #6366F1;
+}
